Complete Oauth Working, Move Full cal to its own file, Fix cal rendering

--- a/appsscript.json
+++ b/appsscript.json
@@ -1,14 +1,6 @@
 {
   "timeZone": "America/Chicago",
-  "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "Calendar",
-        "version": "v3",
-        "serviceId": "calendar"
-      }
-    ]
-  },
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
   "sheets": {
